# mkdocs-auto-tag-plugin

./: .todos  README.md  mkdocs.yml  mypy.ini  requirements.in  requirements.txt  setup.cfg
docs/: index.md  setup.md  usage.md
docs/test/: index.md  not_an_index.md
docs/test/linux/: index.md
docs/test/macos/: whoami.md
docs/test/windows/: whoami.md
src/mkdocs_auto_tag_plugin/: __init__.py  plugin.py  utils.py
