[metadata]
name = mkdocs-auto-tag-plugin
version = 0.1.3
author = six-two
author_email = pip@six-two.dev
description = Add tags to your MkDocs pages based on their path / file name
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/mkdocs-auto-tag-plugin
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
install_requires =
    mkdocs>=1.4.0  

[options.entry_points]
mkdocs.plugins =
    autotag = mkdocs_auto_tag_plugin:Plugin

[options.packages.find]
where = src
